examples/lexer/bad/02_missing_semicolon.sg
// Ошибка: пропущена точка с запятой
fn test_semicolon() -> int {
    let x:int = 42
    let y:int = 10;
    return x + y;
}
